completed module 1 exercises

--- a/modules/module1/labs/L1_DataViz_Intro.ipynb
+++ b/modules/module1/labs/L1_DataViz_Intro.ipynb
@@ -118,9 +118,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<caption>A data.frame: 6 × 3</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>count</th><th scope=col>long</th><th scope=col>lat</th></tr>\n",
+       "\t<tr><th scope=col>&lt;int&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>3</td><td>-0.137930</td><td>51.51342</td></tr>\n",
+       "\t<tr><td>2</td><td>-0.137883</td><td>51.51336</td></tr>\n",
+       "\t<tr><td>1</td><td>-0.137853</td><td>51.51332</td></tr>\n",
+       "\t<tr><td>1</td><td>-0.137812</td><td>51.51326</td></tr>\n",
+       "\t<tr><td>4</td><td>-0.137767</td><td>51.51320</td></tr>\n",
+       "\t<tr><td>2</td><td>-0.137537</td><td>51.51318</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A data.frame: 6 × 3\n",
+       "\\begin{tabular}{r|lll}\n",
+       " count & long & lat\\\\\n",
+       " <int> & <dbl> & <dbl>\\\\\n",
+       "\\hline\n",
+       "\t 3 & -0.137930 & 51.51342\\\\\n",
+       "\t 2 & -0.137883 & 51.51336\\\\\n",
+       "\t 1 & -0.137853 & 51.51332\\\\\n",
+       "\t 1 & -0.137812 & 51.51326\\\\\n",
+       "\t 4 & -0.137767 & 51.51320\\\\\n",
+       "\t 2 & -0.137537 & 51.51318\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A data.frame: 6 × 3\n",
+       "\n",
+       "| count &lt;int&gt; | long &lt;dbl&gt; | lat &lt;dbl&gt; |\n",
+       "|---|---|---|\n",
+       "| 3 | -0.137930 | 51.51342 |\n",
+       "| 2 | -0.137883 | 51.51336 |\n",
+       "| 1 | -0.137853 | 51.51332 |\n",
+       "| 1 | -0.137812 | 51.51326 |\n",
+       "| 4 | -0.137767 | 51.51320 |\n",
+       "| 2 | -0.137537 | 51.51318 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  count long      lat     \n",
+       "1 3     -0.137930 51.51342\n",
+       "2 2     -0.137883 51.51336\n",
+       "3 1     -0.137853 51.51332\n",
+       "4 1     -0.137812 51.51326\n",
+       "5 4     -0.137767 51.51320\n",
+       "6 2     -0.137537 51.51318"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# This is a copy of John Snow's data set. \n",
     "df <- read.csv(\"/dsa/data/all_datasets/CholeraDeathsPumps.csv\")\n",
@@ -129,7 +190,7 @@
     "# water pump locations are given where count is -999. \n",
     "\n",
     "# display the data frame here. \n",
-    "\n",
+    "head(df)\n",
     "# can you find the number of water pumps ? "
    ]
   },
@@ -182,9 +243,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<caption>A data.frame: 11 × 8</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>x1</th><th scope=col>x2</th><th scope=col>x3</th><th scope=col>x4</th><th scope=col>y1</th><th scope=col>y2</th><th scope=col>y3</th><th scope=col>y4</th></tr>\n",
+       "\t<tr><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>10</td><td>10</td><td>10</td><td> 8</td><td> 8.04</td><td>9.14</td><td> 7.46</td><td> 6.58</td></tr>\n",
+       "\t<tr><td> 8</td><td> 8</td><td> 8</td><td> 8</td><td> 6.95</td><td>8.14</td><td> 6.77</td><td> 5.76</td></tr>\n",
+       "\t<tr><td>13</td><td>13</td><td>13</td><td> 8</td><td> 7.58</td><td>8.74</td><td>12.74</td><td> 7.71</td></tr>\n",
+       "\t<tr><td> 9</td><td> 9</td><td> 9</td><td> 8</td><td> 8.81</td><td>8.77</td><td> 7.11</td><td> 8.84</td></tr>\n",
+       "\t<tr><td>11</td><td>11</td><td>11</td><td> 8</td><td> 8.33</td><td>9.26</td><td> 7.81</td><td> 8.47</td></tr>\n",
+       "\t<tr><td>14</td><td>14</td><td>14</td><td> 8</td><td> 9.96</td><td>8.10</td><td> 8.84</td><td> 7.04</td></tr>\n",
+       "\t<tr><td> 6</td><td> 6</td><td> 6</td><td> 8</td><td> 7.24</td><td>6.13</td><td> 6.08</td><td> 5.25</td></tr>\n",
+       "\t<tr><td> 4</td><td> 4</td><td> 4</td><td>19</td><td> 4.26</td><td>3.10</td><td> 5.39</td><td>12.50</td></tr>\n",
+       "\t<tr><td>12</td><td>12</td><td>12</td><td> 8</td><td>10.84</td><td>9.13</td><td> 8.15</td><td> 5.56</td></tr>\n",
+       "\t<tr><td> 7</td><td> 7</td><td> 7</td><td> 8</td><td> 4.82</td><td>7.26</td><td> 6.42</td><td> 7.91</td></tr>\n",
+       "\t<tr><td> 5</td><td> 5</td><td> 5</td><td> 8</td><td> 5.68</td><td>4.74</td><td> 5.73</td><td> 6.89</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A data.frame: 11 × 8\n",
+       "\\begin{tabular}{r|llllllll}\n",
+       " x1 & x2 & x3 & x4 & y1 & y2 & y3 & y4\\\\\n",
+       " <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl>\\\\\n",
+       "\\hline\n",
+       "\t 10 & 10 & 10 &  8 &  8.04 & 9.14 &  7.46 &  6.58\\\\\n",
+       "\t  8 &  8 &  8 &  8 &  6.95 & 8.14 &  6.77 &  5.76\\\\\n",
+       "\t 13 & 13 & 13 &  8 &  7.58 & 8.74 & 12.74 &  7.71\\\\\n",
+       "\t  9 &  9 &  9 &  8 &  8.81 & 8.77 &  7.11 &  8.84\\\\\n",
+       "\t 11 & 11 & 11 &  8 &  8.33 & 9.26 &  7.81 &  8.47\\\\\n",
+       "\t 14 & 14 & 14 &  8 &  9.96 & 8.10 &  8.84 &  7.04\\\\\n",
+       "\t  6 &  6 &  6 &  8 &  7.24 & 6.13 &  6.08 &  5.25\\\\\n",
+       "\t  4 &  4 &  4 & 19 &  4.26 & 3.10 &  5.39 & 12.50\\\\\n",
+       "\t 12 & 12 & 12 &  8 & 10.84 & 9.13 &  8.15 &  5.56\\\\\n",
+       "\t  7 &  7 &  7 &  8 &  4.82 & 7.26 &  6.42 &  7.91\\\\\n",
+       "\t  5 &  5 &  5 &  8 &  5.68 & 4.74 &  5.73 &  6.89\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A data.frame: 11 × 8\n",
+       "\n",
+       "| x1 &lt;dbl&gt; | x2 &lt;dbl&gt; | x3 &lt;dbl&gt; | x4 &lt;dbl&gt; | y1 &lt;dbl&gt; | y2 &lt;dbl&gt; | y3 &lt;dbl&gt; | y4 &lt;dbl&gt; |\n",
+       "|---|---|---|---|---|---|---|---|\n",
+       "| 10 | 10 | 10 |  8 |  8.04 | 9.14 |  7.46 |  6.58 |\n",
+       "|  8 |  8 |  8 |  8 |  6.95 | 8.14 |  6.77 |  5.76 |\n",
+       "| 13 | 13 | 13 |  8 |  7.58 | 8.74 | 12.74 |  7.71 |\n",
+       "|  9 |  9 |  9 |  8 |  8.81 | 8.77 |  7.11 |  8.84 |\n",
+       "| 11 | 11 | 11 |  8 |  8.33 | 9.26 |  7.81 |  8.47 |\n",
+       "| 14 | 14 | 14 |  8 |  9.96 | 8.10 |  8.84 |  7.04 |\n",
+       "|  6 |  6 |  6 |  8 |  7.24 | 6.13 |  6.08 |  5.25 |\n",
+       "|  4 |  4 |  4 | 19 |  4.26 | 3.10 |  5.39 | 12.50 |\n",
+       "| 12 | 12 | 12 |  8 | 10.84 | 9.13 |  8.15 |  5.56 |\n",
+       "|  7 |  7 |  7 |  8 |  4.82 | 7.26 |  6.42 |  7.91 |\n",
+       "|  5 |  5 |  5 |  8 |  5.68 | 4.74 |  5.73 |  6.89 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "   x1 x2 x3 x4 y1    y2   y3    y4   \n",
+       "1  10 10 10  8  8.04 9.14  7.46  6.58\n",
+       "2   8  8  8  8  6.95 8.14  6.77  5.76\n",
+       "3  13 13 13  8  7.58 8.74 12.74  7.71\n",
+       "4   9  9  9  8  8.81 8.77  7.11  8.84\n",
+       "5  11 11 11  8  8.33 9.26  7.81  8.47\n",
+       "6  14 14 14  8  9.96 8.10  8.84  7.04\n",
+       "7   6  6  6  8  7.24 6.13  6.08  5.25\n",
+       "8   4  4  4 19  4.26 3.10  5.39 12.50\n",
+       "9  12 12 12  8 10.84 9.13  8.15  5.56\n",
+       "10  7  7  7  8  4.82 7.26  6.42  7.91\n",
+       "11  5  5  5  8  5.68 4.74  5.73  6.89"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "library(ggplot2)\n",
     "library(gridExtra)\n",
